[package]
name = "ydb-ng"
version = "0.1.0"
authors = ["Charles Hathaway <charles@yottadb.com>"]
edition = "2018"

[dependencies]
clap = "2"
ydb-ng-bridge = { path = "/home/chathaway/p/ydb-ng-bridge" }
fnv = "1.0.3"
bincode = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
nom = "4.2.0"
threadpool = "1.7.1"

#[build-dependencies]
#bindgen = "0.42.2"
#pkg-config = "0.3.14"
